ajout pour le projet 2AIDIFORMATION CONSULTING

--- a/index.html
+++ b/index.html
@@ -12,6 +12,66 @@
     </head>
    
     <body>
+      <section>
+          <div class="e">
+              <div>
+                <img src="" alt="">
+                <img src="" alt="">
+              </div>
+              <div>
+                  <img src="" alt="">
+                  <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+            </div>
+      <div>
+        <div class="col-4 d-flex" >
+          <div style="margin-right: 20px"><img src="image/image main.jpg" alt="" style="height: 350px; width: 500px"></div>
+          <div style="margin-left: 20px"><img src="image/img prof.jpg" alt="" style="width: 350px"></div>
+          <div style="margin-left: 20px"><img src="image/img 1e ord.jpg" alt="" style="width: 350px"></div>
+        </div>
+      </div>
+    </section>
+    
+
+.e{
+  display: flex
+}
+
+
+
+<div class="e">
+  <div>
+    <img src="" alt="">
+    <img src="" alt="">
+  </div>
+  <div>
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
+    <div>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
        <!-- =====le debut de footer de 2AIDI ======= -->
   <footer id="footer" style="background-color: rgb(5, 5, 5)"; style="color: white">
       <div class="footer-top">
@@ -27,31 +87,30 @@
                   <strong>Téléphone:</strong> +22625596335<br>
                   <strong>E-mail:</strong> inf@2iadiformat.com<br>
                 </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                  <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <div class="col-3; d-flex" >
+                   <div style="margin-right: 10px;"><img src="image/facebook_niv.png" alt="" width="30px"></div>
+                   <div style="margin-right: 10px;"><img src="image/youtube_1.png" alt=""  width="30px"></div>
+                   <div style="margin-right: 10px"><img src="image/twitter_208px.png" alt=""  width="30px"></div>
+                   <div style="margin-right: 10px"><img src="image/Instagram_niv.png" alt=""  width="30px"></div>
                 </div>
               </div>
             </div>
   
-            <div class="col-lg-2 col-md-4 footer-links" style="color: white">
+            <div class="col-lg-2 col-md-4 footer-links text-light">
               <h4>LIENS UTILES</h4>
               <ul>
                 ACCUEIL <br>
                 A PROPOS <br>
-                 Services <br>
+                 SERVICES <br>
                  NOS EQUIPE <br>
                 S'INSCRIRE <br>
                 CONTACT <br>
               </ul>
             </div>
   
-            <div class="col-lg-3 col-md-4 footer-links" style="color: white">
+            <div class="col-lg-3 col-md-4 footer-links text-light">
               <h4>NOS SERVICES</h4>
-              <ul style="color: white">
+              <ul>
               Gestion et comptabilité<br>
                 Formation en logistique <br>
                 Gestion de Ressources humane <br>
@@ -61,10 +120,10 @@
               </ul>
             </div>
   
-            <div class="col-lg-4 col-md-4 footer-newsletter">
-              <h4 style="color: white">Notre BULLETIN</h4>
+            <div class="col-lg-4 col-md-4 footer-newsletter text-light">
+              <h4>Notre BULLETIN</h4>
               <form action="" method="post">
-                <input type="email" name="email"><input type="submit" value="S'abonner" style="background: tomato">
+                <input type="email" name="email"><input type="submit" value="S'abonner" style="background: tomato" class="text-white">
               </form>
   
             </div>
@@ -74,8 +133,8 @@
       </div>
 
       <center>
-        <div class="copyright" style="color: white">
-          &copy; Copyright <strong><span></span></strong>.Tous les droits sont réservés
+        <div class="copyright text-light">
+          <h6> Copyright <strong><span></span></strong>.Tous les droits sont réservés</h6>
         </div>
       </center>
        
