--- a/index.html
+++ b/index.html
@@ -502,17 +502,17 @@ désormais en millions, tant l’offre est variée et les cours de qualité. Mai
             <div class="col-lg-3 col-md-4">
               <div class="footer-info">
                 <img src="image/2IAD.jpeg" alt="">
-                <p style="color: rgb(247, 243, 243);">
+                <p class="text-light">
                    <br>
                  Rue 108 Kouame Kourouma<br><br>
                   <strong>Téléphone:</strong> +22625596335<br>
                   <strong>E-mail:</strong> inf@2iadiformat.com<br>
                 </p>
                 <div class="col-3; d-flex" >
-                   <div style="margin-right: 10px;"><img src="image/facebook_niv.png" alt="" width="30px"></div>
-                   <div style="margin-right: 10px;"><img src="image/youtube_1.png" alt=""  width="30px"></div>
-                   <div style="margin-right: 10px"><img src="image/twitter_208px.png" alt=""  width="30px"></div>
-                   <div style="margin-right: 10px"><img src="image/Instagram_niv.png" alt=""  width="30px"></div>
+                   <div><img src="image/facebook_niv.png" alt="" width="30px"></div>
+                   <div><img src="image/youtube_1.png" alt=""  width="30px"></div>
+                   <div><img src="image/twitter_208px.png" alt=""  width="30px"></div>
+                   <div><img src="image/Instagram_niv.png" alt=""  width="30px"></div>
                 </div>
               </div>
             </div>
@@ -553,12 +553,10 @@ désormais en millions, tant l’offre est variée et les cours de qualité. Mai
         </div>
       </div>
 
-      <center>
-
         <div class="copyright text-light">
-          <h6> Copyright <strong><span></span></strong>.Tous les droits sont réservés</h6>
+          <h6 class="text-center"> Copyright 2AIDI<strong><span></span></strong>.Tous les droits sont réservés/Design fait par OMEGA3</h6>
         </div>
-      </center>
+      
        
     </footer><!-- LA FIN DE Footer 2AIDI -->
   
